# paperflow

./: .gitignore  README.md  pyproject.toml
skill/: SKILL.md
src/paperflow/: __init__.py  cli.py  config.py
src/paperflow/core/: __init__.py  reporter.py  storage.py  summarizer.py  translator.py
src/paperflow/models/: __init__.py  article.py  journal.py
src/paperflow/sources/: __init__.py  crossref.py  rss.py  sjr.py
